--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ cp
         </label>
 
         <label for="region-east-us">
-          <input type="radio" name="region" id="region-mexico" value="mexico"> Mexio
+          <input type="radio" name="region" id="region-mexico" value="mexico"> Mexico
         </label>
 
         <label for="region-east-us">
